@@ -11,6 +11,7 @@
 	- duplicate file search inside catalog added (use context menu entry on a file node)
 	- jump to selected file in duplicate result list if user clicked on it added
 	- skip adding file which is looked up for duplicates in result list
+	- font size of archive contents at commwidget fixed
 
 03. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
 	- scanning archve files on subfolder fixed (#3484430)
